Fix tooltip being behind modals

--- a/client/src/components/tooltip/tooltip.module.scss
+++ b/client/src/components/tooltip/tooltip.module.scss
@@ -9,5 +9,5 @@
 	border-radius: 4px;
 	width: max-content;
 	max-width: 470px;
-	z-index: 20;
+	z-index: 110;
 }
